# trophy-python

./: .gitignore  LICENSE  README.md  __init__.py  environment.py  pyproject.toml
.github/workflows/: publish-package.yml
achievements/: client.py
core/: client_wrapper.py
errors/: bad_request_error.py  not_found_error.py  unauthorized_error.py
metrics/: client.py
trophy/: __init__.py  _default_clients.py  client.py  environment.py  reference.md
trophy/.fern/: metadata.json
trophy/achievements/: client.py  raw_client.py
trophy/admin/: __init__.py  client.py  raw_client.py
trophy/core/: client_wrapper.py
trophy/errors/: __init__.py  forbidden_error.py  unauthorized_error.py  unprocessable_entity_error.py
trophy/leaderboards/: __init__.py  client.py  raw_client.py
trophy/metrics/: client.py  raw_client.py
trophy/points/: client.py  raw_client.py
trophy/streaks/: __init__.py  client.py  raw_client.py
trophy/tests/: test_aiohttp_autodetect.py
trophy/types/: __init__.py  achievement_completion_response.py  achievement_completion_response_achievement.py  achievement_response.py  achievement_response_event_attribute.py  achievement_response_event_attributes_item.py  achievement_response_trigger.py  achievement_response_user_attributes_item.py  achievement_with_stats_response.py  achievement_with_stats_response_event_attribute.py  achievement_with_stats_response_user_attributes_item.py  admin_attribute.py  admin_attribute_type.py  admin_error_body.py  admin_issue.py  admin_issue_severity.py  admin_leaderboard.py  (+236 more)
types/: __init__.py  achievement_completion_response.py  event_response.py  event_response_metrics_item.py  metric_status.py  streak_frequency.py
(+54 files in other folders)
