[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trophy-python"
version = "0.1.4"
description = "A Python library for the Trophy API"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "requests",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/trophyso/trophy-python"
Repository = "https://github.com/trophyso/trophy-python"

[tool.setuptools.packages.find]
where = ["trophy_python"]
include = ["trophy_python"]
