[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trophy"
version = "1.0.20"
description = "A Python library for the Trophy API"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "requests",
    "httpx",
    "pydantic",
    "typing",
    "dataclasses",
    "typing_extensions",
]

[project.urls]
Homepage = "https://github.com/trophyso/trophy-python"
Repository = "https://github.com/trophyso/trophy-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["trophy", "trophy.*"]
